<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup_with_google">Sign Up with Google</string>
    <string name="signup_with_facebook">Sign Up with Facebook</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="plan">Plan</string>
    <string name="saved">Saved</string>
    <string name="new_meals">New Meals</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="video">Video</string>
    <string name="from_favourites">From Favourites</string>
    <string name="from_search">From Search</string>
</resources>