<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.meal.MealFragment">

    <ImageView
        android:id="@+id/mealImage"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/meal_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bookmarkButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_background"
        android:padding="12dp"
        android:src="@drawable/bookmark_selector"
        app:layout_constraintEnd_toEndOf="@id/mealImage"
        app:layout_constraintTop_toTopOf="@id/mealImage" />

    <TextView
        android:id="@+id/meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Meal Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealImage" />

    <com.google.android.material.chip.Chip
        android:id="@+id/meal_category"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Seafood"
        app:chipBackgroundColor="@color/white"
        app:chipIcon="@drawable/seafood"
        app:chipStrokeColor="@android:color/transparent"
        app:chipStrokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/meal_name" />

    <!--    make a small horizontal divider next to meal_category-->
    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="16dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/meal_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_name" />

    <com.google.android.material.chip.Chip
        android:id="@+id/meal_country"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="British"
        app:chipBackgroundColor="@color/white"
        app:chipIcon="@drawable/england"
        app:chipStrokeColor="@android:color/transparent"
        app:chipStrokeWidth="0dp"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_name"
        app:layout_constraintTop_toTopOf="@id/meal_category" />



    <TextView
        android:id="@+id/ingredientsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        app:layout_constraintTop_toBottomOf="@+id/meal_category"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsTitle" />


    <TextView
        android:id="@+id/stepsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        />

    <moe.feng.common.stepperview.VerticalStepperView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/stepperView"
        app:step_animation_duration="400"
        app:step_activated_color="@color/md_theme_light_primary"

        app:layout_constraintTop_toBottomOf="@+id/stepsTitle"
        />

    <TextView
        android:id="@+id/videoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        app:layout_constraintTop_toBottomOf="@+id/stepperView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        />


    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoTitle"

         />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
